2003-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/list.bench: lsearch -regexp benchmarks

	* tcl/file.bench: updated with more benchmarks

2003-02-08  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/startup.bench: replaced by file benchmarks
	* tcl/file.bench: file benchmarks

2002-11-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/regexp.bench: added anchored re tests

	* tcl/klist.bench: allow method filter from command lineinvocation.

	* tcl/list.bench: add lset benchmarks

	* tcl/md5.bench: correct to work with pre-8.2 interps

	* tcl/string.bench: add string growth, remove split benchmarks
	* tcl/split.bench: more split benchmarks

	* runbench.tcl: allow tclsh*/wish* (no version required)

2002-07-24  Miguel Sofer <msofer@users.sourceforge.net>

	* tcl/base64.bench: added the current code from tcllib.
	
2002-06-20  Miguel Sofer <msofer@users.sourceforge.net>

	* tcl/read.bench: modified to actually "use" the data being read
	by setting a local variable. 

2002-06-20  Miguel Sofer <msofer@users.sourceforge.net>

	* tcl/md5.bench: added the faster implementation from tcllib
	
2002-06-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl/catch.bench: corrected use of string map in toplevel code

	* tcl/expr.bench: corrected use of string repeat in toplevel code

	* tcl/sha1.bench: correct wideint problem for 8.4 in sha1DF

	* tcl/string.bench: corrected string equality checks to use
	different variables (objects)

	* tcl/gccont.bench: new benchmark that does some bioinformatics
	manipulation on dna sequences

2002-06-12  Miguel Sofer <msofer@users.sourceforge.net>

	* tcl/klist.bench:
	* tcl/heapsort.bench: added algorithms using [lset]
	
2002-06-11  Miguel Sofer <msofer@users.sourceforge.net>

	* tcl/regexp.bench: made the bench access the match variables, to
	benchmark also the read access to them.
	* tcl/vars.bench: added a "VAR ref local" benchmark, to be able to
	compare the access times of linked variables to those of local
	variables. 
